project part1/parser.output
Nonterminals useless in grammar

    block_content


Terminals unused in grammar

    ADDRESS
    BAR


Rules useless in parser due to conflicts

   14 par_list: ε

   41 var_stmt: VAR type_decls block

   58 if_stmt: IF expr COLON block

   65 while_stmt: WHILE expr COLON block

   69 for_stmt: FOR LPAREN assignment expr SEMICOLON expr RPAREN COLON block

   78 $@6: ε


State 9 conflicts: 1 shift/reduce
State 29 conflicts: 21 shift/reduce
State 36 conflicts: 10 shift/reduce
State 37 conflicts: 1 shift/reduce
State 43 conflicts: 1 reduce/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 21 shift/reduce, 24 reduce/reduce
State 69 conflicts: 2 shift/reduce
State 71 conflicts: 21 shift/reduce
State 72 conflicts: 21 shift/reduce
State 73 conflicts: 1 shift/reduce
State 78 conflicts: 21 shift/reduce
State 89 conflicts: 21 shift/reduce
State 108 conflicts: 21 shift/reduce, 24 reduce/reduce
State 109 conflicts: 21 shift/reduce, 24 reduce/reduce
State 114 conflicts: 22 shift/reduce
State 116 conflicts: 21 shift/reduce
State 118 conflicts: 21 shift/reduce
State 131 conflicts: 24 reduce/reduce
State 134 conflicts: 2 shift/reduce
State 147 conflicts: 21 shift/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce, 24 reduce/reduce
State 157 conflicts: 24 reduce/reduce
State 167 conflicts: 21 shift/reduce, 24 reduce/reduce
State 183 conflicts: 21 shift/reduce
State 199 conflicts: 1 shift/reduce
State 215 conflicts: 21 shift/reduce
State 223 conflicts: 24 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: func_list
    2        | error

    3 func_list: func_list function
    4          | function

    5 $@1: ε

    6 function: DEF ID LPAREN par_list RPAREN COLON RETURNS type $@1 stmt_list

    7 $@2: ε

    8 function: DEF ID LPAREN RPAREN COLON RETURNS type $@2 stmt_list

    9 $@3: ε

   10 function: DEF ID LPAREN par_list RPAREN COLON $@3 stmt_list

   11 $@4: ε

   12 function: DEF ID LPAREN RPAREN COLON $@4 stmt_list

   13 par_list: param_list_item_list
   14         | ε

   15 param_list_item_list: param_list_item_list SEMICOLON par_list_item
   16                     | par_list_item

   17 par_list_item: ID type COLON ID

   18 type: TYPE_INT
   19     | TYPE_CHAR
   20     | TYPE_REAL
   21     | TYPE_BOOL
   22     | TYPE_STRING
   23     | TYPE_INT_PTR
   24     | TYPE_CHAR_PTR
   25     | TYPE_REAL_PTR

   26 stmt_list: stmt_list stmt
   27          | stmt

   28 stmt: assignment
   29     | if_stmt
   30     | return_stmt
   31     | block
   32     | while_stmt
   33     | for_stmt
   34     | call_args
   35     | do_while_stmt
   36     | var_stmt
   37     | void_call
   38     | assignment_call
   39     | func_list

   40 assignment: ID ASSIGN expr SEMICOLON

   41 var_stmt: VAR type_decls block
   42         | VAR type_decls stmt

   43 type_decls: type_decls type_decl
   44           | type_decl

   45 type_decl: TYPE TYPE_INT COLON ID SEMICOLON
   46          | TYPE TYPE_BOOL COLON ID SEMICOLON
   47          | TYPE TYPE_CHAR COLON ID SEMICOLON
   48          | TYPE TYPE_STRING COLON ID SEMICOLON
   49          | TYPE TYPE_REAL COLON ID SEMICOLON
   50          | TYPE TYPE_INT COLON ID COLON NUM SEMICOLON
   51          | TYPE TYPE_CHAR COLON ID COLON CHAR_LITERAL SEMICOLON
   52          | TYPE TYPE_STRING COLON ID COLON STRING_LITERAL SEMICOLON
   53          | TYPE TYPE_BOOL COLON ID COLON TRUE SEMICOLON
   54          | TYPE TYPE_BOOL COLON ID COLON FALSE SEMICOLON

   55 return_stmt: RETURN expr SEMICOLON
   56            | RETURN SEMICOLON

   57 if_stmt: IF expr COLON block ELSE COLON block
   58        | IF expr COLON block
   59        | IF expr COLON stmt
   60        | IF expr COLON stmt ELSE COLON stmt
   61        | IF expr COLON block elif_list ELSE COLON block

   62 elif_list: ELIF expr COLON block
   63          | elif_list ELIF expr COLON block

   64 while_stmt: WHILE COLON expr SEMICOLON
   65           | WHILE expr COLON block
   66           | WHILE expr COLON stmt

   67 do_while_stmt: DO COLON block while_stmt

   68 for_stmt: FOR LPAREN assignment expr SEMICOLON expr RPAREN COLON stmt
   69         | FOR LPAREN assignment expr SEMICOLON expr RPAREN COLON block

   70 call_args: call_list
   71          | ε

   72 call_list: call_list COMMA expr
   73          | expr

   74 assignment_call: ID ASSIGN CALL ID LPAREN call_args RPAREN SEMICOLON

   75 void_call: CALL ID LPAREN call_args RPAREN SEMICOLON

   76 $@5: ε

   77 block: T_BEGIN $@5 stmt_list T_END

   78 $@6: ε

   79 block: T_BEGIN $@6 T_END

   80 expr: expr PLUS expr
   81     | expr MINUS expr
   82     | expr MULT expr
   83     | expr DIV expr
   84     | expr EQ expr
   85     | expr NE expr
   86     | expr LT expr
   87     | expr GT expr
   88     | expr LE expr
   89     | expr GE expr
   90     | LPAREN expr RPAREN
   91     | LBRACK expr RBRACK
   92     | NUM
   93     | ID
   94     | CHAR_LITERAL
   95     | STRING_LITERAL
   96     | NULLPTR
   97     | TRUE
   98     | FALSE
   99     | AND
  100     | OR
  101     | NOT
  102     | CALL ID LPAREN call_args RPAREN
  103     | ID LPAREN call_args RPAREN
  104     | expr AND expr
  105     | expr OR expr
  106     | NOT expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2
    OR (258) 100 105
    AND (259) 99 104
    PLUS (260) 80
    MINUS (261) 81
    MULT (262) 82
    DIV (263) 83
    EQ (264) 84
    NE (265) 85
    GT (266) 87
    GE (267) 89
    LT (268) 86
    LE (269) 88
    NOT (270) 101 106
    ID <sval> (271) 6 8 10 12 17 40 45 46 47 48 49 50 51 52 53 54 74 75 93 102 103
    CHAR_LITERAL <sval> (272) 51 94
    STRING_LITERAL <sval> (273) 52 95
    NUM <sval> (274) 50 92
    TRUE <sval> (275) 53 97
    FALSE <sval> (276) 54 98
    TYPE_INT <sval> (277) 18 45 50
    TYPE_CHAR <sval> (278) 19 47 51
    TYPE_REAL <sval> (279) 20 49
    TYPE_BOOL <sval> (280) 21 46 53 54
    TYPE_STRING <sval> (281) 22 48 52
    TYPE_INT_PTR <sval> (282) 23
    TYPE_CHAR_PTR <sval> (283) 24
    TYPE_REAL_PTR <sval> (284) 25
    DEF (285) 6 8 10 12
    T_BEGIN (286) 77 79
    T_END (287) 77 79
    IF (288) 57 58 59 60 61
    ELSE (289) 57 60 61
    ELIF (290) 62 63
    WHILE (291) 64 65 66
    FOR (292) 68 69
    DO (293) 67
    CALL (294) 74 75 102
    RETURN (295) 55 56
    RETURNS (296) 6 8
    VAR (297) 41 42
    NULLPTR (298) 96
    ASSIGN (299) 40 74
    ADDRESS (300)
    COLON (301) 6 8 10 12 17 45 46 47 48 49 50 51 52 53 54 57 58 59 60 61 62 63 64 65 66 67 68 69
    SEMICOLON (302) 15 40 45 46 47 48 49 50 51 52 53 54 55 56 64 68 69 74 75
    COMMA (303) 72
    LPAREN (304) 6 8 10 12 68 69 74 75 90 102 103
    RPAREN (305) 6 8 10 12 68 69 74 75 90 102 103
    LBRACK (306) 91
    RBRACK (307) 91
    BAR (308)
    TYPE (309) 45 46 47 48 49 50 51 52 53 54


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program <ast> (56)
        on left: 1 2
        on right: 0
    func_list <ast> (57)
        on left: 3 4
        on right: 1 3 39
    function <ast> (58)
        on left: 6 8 10 12
        on right: 3 4
    $@1 (59)
        on left: 5
        on right: 6
    $@2 (60)
        on left: 7
        on right: 8
    $@3 (61)
        on left: 9
        on right: 10
    $@4 (62)
        on left: 11
        on right: 12
    par_list <ast> (63)
        on left: 13 14
        on right: 6 10
    param_list_item_list <ast> (64)
        on left: 15 16
        on right: 13 15
    par_list_item <ast> (65)
        on left: 17
        on right: 15 16
    type <ast> (66)
        on left: 18 19 20 21 22 23 24 25
        on right: 6 8 17
    stmt_list <ast> (67)
        on left: 26 27
        on right: 6 8 10 12 26 77
    stmt <ast> (68)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 26 27 42 59 60 66 68
    assignment <ast> (69)
        on left: 40
        on right: 28 68 69
    var_stmt <ast> (70)
        on left: 41 42
        on right: 36
    type_decls <ast> (71)
        on left: 43 44
        on right: 41 42 43
    type_decl <ast> (72)
        on left: 45 46 47 48 49 50 51 52 53 54
        on right: 43 44
    return_stmt <ast> (73)
        on left: 55 56
        on right: 30
    if_stmt <ast> (74)
        on left: 57 58 59 60 61
        on right: 29
    elif_list <ast> (75)
        on left: 62 63
        on right: 61 63
    while_stmt <ast> (76)
        on left: 64 65 66
        on right: 32 67
    do_while_stmt <ast> (77)
        on left: 67
        on right: 35
    for_stmt <ast> (78)
        on left: 68 69
        on right: 33
    call_args <ast> (79)
        on left: 70 71
        on right: 34 74 75 102 103
    call_list <ast> (80)
        on left: 72 73
        on right: 70 72
    assignment_call <ast> (81)
        on left: 74
        on right: 38
    void_call <ast> (82)
        on left: 75
        on right: 37
    block <ast> (83)
        on left: 77 79
        on right: 31 41 57 58 61 62 63 65 67 69
    $@5 (84)
        on left: 76
        on right: 77
    $@6 (85)
        on left: 78
        on right: 79
    expr <ast> (86)
        on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
        on right: 40 55 57 58 59 60 61 62 63 64 65 66 68 69 72 73 80 81 82 83 84 85 86 87 88 89 90 91 104 105 106


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    DEF    shift, and go to state 2

    program    go to state 3
    func_list  go to state 4
    function   go to state 5


State 1

    2 program: error •

    $default  reduce using rule 2 (program)


State 2

    6 function: DEF • ID LPAREN par_list RPAREN COLON RETURNS type $@1 stmt_list
    8         | DEF • ID LPAREN RPAREN COLON RETURNS type $@2 stmt_list
   10         | DEF • ID LPAREN par_list RPAREN COLON $@3 stmt_list
   12         | DEF • ID LPAREN RPAREN COLON $@4 stmt_list

    ID  shift, and go to state 6


State 3

    0 $accept: program • $end

    $end  shift, and go to state 7


State 4

    1 program: func_list •
    3 func_list: func_list • function

    DEF  shift, and go to state 2

    $default  reduce using rule 1 (program)

    function  go to state 8


State 5

    4 func_list: function •

    $default  reduce using rule 4 (func_list)


State 6

    6 function: DEF ID • LPAREN par_list RPAREN COLON RETURNS type $@1 stmt_list
    8         | DEF ID • LPAREN RPAREN COLON RETURNS type $@2 stmt_list
   10         | DEF ID • LPAREN par_list RPAREN COLON $@3 stmt_list
   12         | DEF ID • LPAREN RPAREN COLON $@4 stmt_list

    LPAREN  shift, and go to state 9


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 func_list: func_list function •

    $default  reduce using rule 3 (func_list)


State 9

    6 function: DEF ID LPAREN • par_list RPAREN COLON RETURNS type $@1 stmt_list
    8         | DEF ID LPAREN • RPAREN COLON RETURNS type $@2 stmt_list
   10         | DEF ID LPAREN • par_list RPAREN COLON $@3 stmt_list
   12         | DEF ID LPAREN • RPAREN COLON $@4 stmt_list

    ID      shift, and go to state 10
    RPAREN  shift, and go to state 11

    RPAREN  [reduce using rule 14 (par_list)]

    par_list              go to state 12
    param_list_item_list  go to state 13
    par_list_item         go to state 14


State 10

   17 par_list_item: ID • type COLON ID

    TYPE_INT       shift, and go to state 15
    TYPE_CHAR      shift, and go to state 16
    TYPE_REAL      shift, and go to state 17
    TYPE_BOOL      shift, and go to state 18
    TYPE_STRING    shift, and go to state 19
    TYPE_INT_PTR   shift, and go to state 20
    TYPE_CHAR_PTR  shift, and go to state 21
    TYPE_REAL_PTR  shift, and go to state 22

    type  go to state 23


State 11

    8 function: DEF ID LPAREN RPAREN • COLON RETURNS type $@2 stmt_list
   12         | DEF ID LPAREN RPAREN • COLON $@4 stmt_list

    COLON  shift, and go to state 24


State 12

    6 function: DEF ID LPAREN par_list • RPAREN COLON RETURNS type $@1 stmt_list
   10         | DEF ID LPAREN par_list • RPAREN COLON $@3 stmt_list

    RPAREN  shift, and go to state 25


State 13

   13 par_list: param_list_item_list •
   15 param_list_item_list: param_list_item_list • SEMICOLON par_list_item

    SEMICOLON  shift, and go to state 26

    $default  reduce using rule 13 (par_list)


State 14

   16 param_list_item_list: par_list_item •

    $default  reduce using rule 16 (param_list_item_list)


State 15

   18 type: TYPE_INT •

    $default  reduce using rule 18 (type)


State 16

   19 type: TYPE_CHAR •

    $default  reduce using rule 19 (type)


State 17

   20 type: TYPE_REAL •

    $default  reduce using rule 20 (type)


State 18

   21 type: TYPE_BOOL •

    $default  reduce using rule 21 (type)


State 19

   22 type: TYPE_STRING •

    $default  reduce using rule 22 (type)


State 20

   23 type: TYPE_INT_PTR •

    $default  reduce using rule 23 (type)


State 21

   24 type: TYPE_CHAR_PTR •

    $default  reduce using rule 24 (type)


State 22

   25 type: TYPE_REAL_PTR •

    $default  reduce using rule 25 (type)


State 23

   17 par_list_item: ID type • COLON ID

    COLON  shift, and go to state 27


State 24

    8 function: DEF ID LPAREN RPAREN COLON • RETURNS type $@2 stmt_list
   12         | DEF ID LPAREN RPAREN COLON • $@4 stmt_list

    RETURNS  shift, and go to state 28

    $default  reduce using rule 11 ($@4)

    $@4  go to state 29


State 25

    6 function: DEF ID LPAREN par_list RPAREN • COLON RETURNS type $@1 stmt_list
   10         | DEF ID LPAREN par_list RPAREN • COLON $@3 stmt_list

    COLON  shift, and go to state 30


State 26

   15 param_list_item_list: param_list_item_list SEMICOLON • par_list_item

    ID  shift, and go to state 10

    par_list_item  go to state 31


State 27

   17 par_list_item: ID type COLON • ID

    ID  shift, and go to state 32


State 28

    8 function: DEF ID LPAREN RPAREN COLON RETURNS • type $@2 stmt_list

    TYPE_INT       shift, and go to state 15
    TYPE_CHAR      shift, and go to state 16
    TYPE_REAL      shift, and go to state 17
    TYPE_BOOL      shift, and go to state 18
    TYPE_STRING    shift, and go to state 19
    TYPE_INT_PTR   shift, and go to state 20
    TYPE_CHAR_PTR  shift, and go to state 21
    TYPE_REAL_PTR  shift, and go to state 22

    type  go to state 33


State 29

   12 function: DEF ID LPAREN RPAREN COLON $@4 • stmt_list

    OR              shift, and go to state 34
    AND             shift, and go to state 35
    NOT             shift, and go to state 36
    ID              shift, and go to state 37
    CHAR_LITERAL    shift, and go to state 38
    STRING_LITERAL  shift, and go to state 39
    NUM             shift, and go to state 40
    TRUE            shift, and go to state 41
    FALSE           shift, and go to state 42
    DEF             shift, and go to state 2
    T_BEGIN         shift, and go to state 43
    IF              shift, and go to state 44
    WHILE           shift, and go to state 45
    FOR             shift, and go to state 46
    DO              shift, and go to state 47
    CALL            shift, and go to state 48
    RETURN          shift, and go to state 49
    VAR             shift, and go to state 50
    NULLPTR         shift, and go to state 51
    LPAREN          shift, and go to state 52
    LBRACK          shift, and go to state 53
